                                  QDRDBMS
---------------------------------------------------------------------------

2007-04-xx   Darren Duncan <perl@DarrenDuncan.net>

    * QDRDBMS version 0.0.0 for Perl 5 is released on CPAN as
    QDRDBMS-v0.0.0.tar.gz.  QDRDBMS version 0.0.0 for Perl 6 is not
    released at this time, if ever, since it is currently released only as
    part of the Perl6-Pugs project (in its ext/QDRDBMS/ subdirectory),
    which sets its own less frequent release schedule.  The rest of this
    Changes entry refers only to the Perl 5 version.

    * This is the first release of the Perl 5 QDRDBMS distribution, and the
    first release of any distribution to contain Perl 5 modules named
    QDRDBMS::*.

    * This is the initial file manifest:

        archives/OSCON2005LightningTalk.txt
        archives/OSCON2006SessionProposal.txt
        Changes
        GPL
        INSTALL
        lib/QDRDBMS.pm
        lib/QDRDBMS/AST.pm
        lib/QDRDBMS/Copying.pod
        lib/QDRDBMS/Engine/Example.pm
        lib/QDRDBMS/Engine/Example/PhysType.pm
        lib/QDRDBMS/GSTV.pm
        lib/QDRDBMS/Language.pod
        lib/QDRDBMS/SeeAlso.pod
        lib/QDRDBMS/Validator.pm
        Makefile.PL
        MANIFEST			This list of files
        MANIFEST.SKIP
        META.yml
        README
        t/QDR_00_Compile.t
        t/QDR_50_Validate_Example.t

    * Initial code file versions are: QDRDBMS.pm and AST.pm and GSTV.pm and
    Validator.pm and Example.pm and PhysType.pm 0.0.0.