@@ -7,6 +7,7 @@ lib/QDRDBMS.pm
 lib/QDRDBMS/AST.pm
 lib/QDRDBMS/Copying.pod
 lib/QDRDBMS/Engine/Example.pm
+lib/QDRDBMS/Engine/Example/Operators.pm
 lib/QDRDBMS/Engine/Example/PhysType.pm
 lib/QDRDBMS/GSTV.pm
 lib/QDRDBMS/Language.pod
