@@ -25,6 +25,7 @@
         lib/QDRDBMS/AST.pm
         lib/QDRDBMS/Copying.pod
         lib/QDRDBMS/Engine/Example.pm
+        lib/QDRDBMS/Engine/Example/Operators.pm
         lib/QDRDBMS/Engine/Example/PhysType.pm
         lib/QDRDBMS/GSTV.pm
         lib/QDRDBMS/Language.pod
@@ -39,4 +40,4 @@
         t/QDR_50_Validate_Example.t
 
     * Initial code file versions are: QDRDBMS.pm and AST.pm and GSTV.pm and
-    Validator.pm and Example.pm and PhysType.pm 0.0.0.
+    Validator.pm and Example.pm and PhysType.pm and Operators.pm 0.0.0.
